Resolve multiple definition of 'handleSocketError' when statically linking with JDK native libraries

XMLWordPrintable

    • b19

        When statically link a set of JDK native libraries and libjvm with the launcher executable (see JDK-8303796 for more details), the linker reports failure due to multiple definitions of 'handleSocketError', e.g.:

        .../libsctp.a(SctpNet.o): in function `handleSocketError':
        .../SctpNet.c:124: multiple definition of `handleSocketError'; .../libnio.a(Net.o):.../Net.c:918: first defined here
        collect2: error: ld returned 1 exit status

              Assignee:
              Jiangli Zhou
              Reporter:
              Jiangli Zhou
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: