8305858: Resolve multiple definition of 'handleSocketError' when statically linking with JDK native libraries